--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,7 @@
 <header>
-  <h1>This is the header</h1>
+  <img src="assets/task-management-logo.png" alt="logo" />
+  <div>
+    <h1>Easy Task</h1>
+    <p>Enterprise level task management without friction</p>
+  </div>
 </header>
