--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,11 @@
 <main class="main">
   <ul id="users" *ngFor="let user of users()">
     <li>
-      <app-user [avatar]="user.avatar" [name]="user.name" />
+      <app-user
+        [id]="user.id"
+        [avatar]="user.avatar"
+        [name]="user.name"
+        (select)="onSelectUser($event)" />
     </li>
   </ul>
 </main>
